# hex-commerce-service

./: .ruff.toml  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: acl.md  benchmarks.md  init.md  outbox.md
src/design/: README.md  class.pu  docker-compose.yml
src/hex_commerce_service/: __init__.py  alembic.ini
src/hex_commerce_service/alembic/: README.md  env.py
src/hex_commerce_service/alembic/versions/: 0001_init_schema.py  0002_add_indexes.py  0003_add_outbox.py
src/hex_commerce_service/app/acl/: dto_external.py  errors.py  mapping.py
src/hex_commerce_service/app/adapters/inbound/api/: app.py  app_state.py  dtos.py  errors.py
src/hex_commerce_service/app/adapters/inbound/cli/: app.py  container.py  inventory.py  orders.py  products.py
src/hex_commerce_service/app/adapters/inmemory/: notifications.py  repositories.py  system.py
src/hex_commerce_service/app/adapters/outbound/: sqlalchemy_repositories.py
src/hex_commerce_service/app/adapters/outbound/email/: fake.py
src/hex_commerce_service/app/adapters/outbound/payment/: fake.py
src/hex_commerce_service/app/application/: errors.py  message_bus.py
src/hex_commerce_service/app/application/messages/: events.py
src/hex_commerce_service/app/application/ports/: __init__.py  email.py  events.py  ids.py  notifications.py  payments.py  repositories.py  repositories_async.py  time.py  unit_of_work.py
src/hex_commerce_service/app/application/use_cases/: __init__.py  allocate_stock.py  place_order.py
src/hex_commerce_service/app/config/: logging.py  settings.py
src/hex_commerce_service/app/domain/: errors.py  events.py
src/hex_commerce_service/app/domain/entities/: __init__.py  inventory.py  order.py  product.py
src/hex_commerce_service/app/domain/value_object/: order_id.py
src/hex_commerce_service/app/domain/value_objects/: __init__.py  email.py  money.py  order_id.py  sku.py
src/hex_commerce_service/app/infra/db/: base.py  config.py  models.py  outbox_models.py  session.py
src/hex_commerce_service/app/infra/outbox/: dispatcher.py  repository.py  serializer.py
src/hex_commerce_service/tests/: test_test.py
src/scripts/bench/: seed_and_query.py
src/tests/acl/: test_external_mapping_order_e2e.py
src/tests/api/: test_auth_jwt.py  test_orders_api.py
src/tests/app/adapters/inmemory/: test_unit_of_work.py
src/tests/app/application/: test_e2e_order_flow_message_bus.py
src/tests/app/application/use_cases/: test_allocate_stock.py  test_place_order.py
src/tests/app/domain/entities/: test_inventory.py  test_order.py  test_product.py
src/tests/app/domain/value_object/: test_email.py  test_money.py  test_order_id.py  test_sku.py
src/tests/cli/: README.md  test_cli_smoke.py
src/tests/config/: test_settings_and_logging.py
src/tests/contract/: test_email.notifier_contract.py  test_payment_gateway_contract.py
src/tests/factories/: ___init__.py  db_seed.py  domain_builders.py
src/tests/integration/: test_db_migrations.py  test_query_optimization.py  test_sqlalchemy_repositories.py
(+6 files in other folders)
