[project]
name = "hex-commerce-service"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "sqlalchemy[asyncio]>=2.0.43",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.12.12",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hex_commerce_service"]

[tool.rye.scripts]
ci = { chain = ["check", "test"] }
check = { chain = ["fix:ruff", "format:ruff", "check:ruff", "check:mypy"] }
"format:ruff" = "ruff format ."
"check:ruff" = "ruff check ."
"fix:ruff" = "ruff check --fix ."
"check:mypy" = "mypy ."
test = "pytest"
"alembic:upgrade" = "alembic upgrade head"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = [
    "-q",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing"
]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "main.py",
    "*/alembic/*",
]
